Finalize backend production setup: Dockerfile, configs, and security updates